fixed line spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@ header {
 	font-family: 'Nunito Sans', sans-serif;
 	text-transform: uppercase;
 	text-align: center;
+	padding: 50px 0px 50px 0px;
 }
 
 a:link {
@@ -46,33 +47,10 @@ a:active {
 }
 
 /* style nav list so it is a horizontal nav bar */
-/*nav {
-	font-family: 'Nunito Sans', sans-serif;
-	font-size: 18px;
-	text-transform: uppercase;
-}
-
-nav ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-}
-
-nav li {
-	float: left;
-}
-
-nav a {
-	display: block;
-	color: rgba(172, 68, 93, 1);
-	text-align: center;
-    padding: 20px 20px 20px 20px;
-    text-decoration: none;
-}*/
+/* this is not fully centered but good enough for now */
 
 nav {
-	border:1px solid #ccc;
+	border:1px solid rgba(210, 215, 211, 1);
     border-width:1px 0;
     font-family: 'Nunito Sans', sans-serif;
 	font-size: 18px;
@@ -93,20 +71,56 @@ nav li {
 nav a {
 	display: inline-block;
 	color: rgba(172, 68, 93, 1);
-    padding: 20px 20px 20px 20px;
+    padding: 20px;
     text-decoration: none;
 }
 
-
+/* styling the interior portfolio content */
 .bodyheadline {
 	font-family: 'Cormorant Garamond', serif;
 	font-size: 36px;
+}
+
+.portfolio {
+	margin: 0px 300px 50px 300px;
+}
+
+.portfolio p {
+	font-family: 'Lato', sans-serif;
+	font-size: 14px;
+}
+
+
+.aboutme {
+	margin: 0px 300px 50px 300px;
+}
+
+.aboutme p {
+	font-family: 'Lato', sans-serif;
+	font-size: 16px;
+	line-height: 22px;
+}
+
+.fivethings {
+	margin: 0px 300px 50px 300px;
+}
+
+.fivethings li {
+	font-family: 'Lato', sans-serif;
+	font-size: 16px;
+	line-height: 22px;
+	padding-bottom: 10px;
+}
+
+.item {
+	padding: 0px 0px 40px 0px;
 }
 
 /* style footer so it is a horizontal nav bar */
 /* gave up on trying to make it centered instead of tacked left */
 
 footer {
+	background-color: rgba(38, 47, 41, 1);
 	font-family: 'Nunito Sans', sans-serif;
 	font-size: 12px;
 }
@@ -115,16 +129,15 @@ footer ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-	overflow: hidden;
-	background-color: rgba(38, 47, 41, 1);
+	text-align: center;
 }
 
 footer li {
-	float: left;
+	display: inline;
 }
 
 footer a {
-	display: block;
+	display: inline-block;
 	color: rgba(243, 243, 239, 1);
 	padding: 20px;
 	text-decoration: none;
